<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyServiceActivity!</string>
    <string name="app_name">MyService</string>
    <string name="startButtonText">Start</string>
    <string name="stopButtonText">Stop</string>
    <string name="svc_name">MyService</string>
    <string name="bindButtonText">bind</string>
    <string name="unbindButtonText">unbind</string>

</resources>