<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startService"
            android:text="@string/startButtonText" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopService"
            android:text="@string/stopButtonText" />

        <Button
            android:id="@+id/bindButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bindOnClick"
            android:text="@string/bindButtonText" />

        <Button
            android:id="@+id/unbindButtion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="unbindOnClick"
            android:text="@string/unbindButtonText" />

    </LinearLayout>

</LinearLayout>